--- a/sections/related-collection.liquid
+++ b/sections/related-collection.liquid
@@ -2,10 +2,10 @@
   x-data="relatedCollection"
   x-init="initialize({{ product.id }})"
   x-show="products.length > 0"
-  class="container mt-10">
+  class="container mt-10 flex flex-col items-center">
   <h2 class="text-2xl uppercase text-primary text-center my-10">Reszta kolekcji</h2>
-  <div class="flex items-center gap-2 sm:gap-4">
-    <div id="related-collection-btn-prev" class=" hidden sm:block cursor-pointer text-primary  hover:scale-125 active:scale-100 transition rounded-full">{% render 'icon-chevron-left'
+  <div class="relative w-[90%]">
+    <div id="related-collection-btn-prev" class="absolute z-10 top-1/2 -translate-y-1/2 -left-10 sm:block cursor-pointer text-primary  hover:scale-125 active:scale-100 transition rounded-full">{% render 'icon-chevron-left'
 , size: 30 %}</div>
     <div id="related-collection-swiper" class="swiper">
       <div class="swiper-wrapper items-stretch ">
@@ -13,8 +13,10 @@
           <a
             x-data
             x-reveal.delay.500
-            class="!h-auto relative hover:shadow-lg transition p-2 text-xl font-light group swiper-slide "
+            class="!h-auto select-none relative hover:shadow-lg transition p-2 text-xl font-light group swiper-slide "
             :href="product.onlineStoreUrl == null ? product.handle : product.onlineStoreUrl">
+
+            {% comment %}* add h-full below to make all cards equal{% endcomment %}
             <div class="h-full flex flex-col">
 
                 {% comment %} Featured image {% endcomment %}
@@ -39,9 +41,9 @@
 
               <!-- Product Title -->
               <div class="flex flex-col py-4 gap-2">
-                <div class="transition underline-offset-2 decoration-1 group-hover:underline" x-text="product.title"></div>
+                <div class="transition underline-offset-2 decoration-1 group-hover:underline" x-text="product.title.substring(0,30) + '...'"></div>
                 <template x-if="product.availableForSale">
-                  <div class="font-medium flex gap-3">
+                  <div class="font-medium flex gap-3 flex-wrap text-base">
 
                     <!-- Price range -->
                     <div x-show="priceVaries(product)">
@@ -59,6 +61,7 @@
                       x-show="product.compareAtPriceRange.maxVariantPrice.amount > product.priceRange.minVariantPrice.amount"
                       class=" font-normal"
                       x-text="helpers.formatMoney(product.compareAtPriceRange.maxVariantPrice.amount,true)"></s>
+
                   </div>
                 </template>
               </div>
@@ -109,21 +112,13 @@
         </template>
       </div>
     </div>
-    <div id="related-collection-btn-next" class=" hidden sm:block cursor-pointer text-primary  hover:scale-125 active:scale-100 transition rounded-full">{% render 'icon-chevron-right'
+    <div id="related-collection-btn-next" class="absolute z-10 top-1/2 -translate-y-1/2 -right-10 sm:block cursor-pointer text-primary  hover:scale-125 active:scale-100 transition rounded-full">{% render 'icon-chevron-right'
 , size: 30 %}</div>
   </div>
 </div>
 {% schema %}
   {
     "name": "Reszta kolekcji",
-    "settings": [
-      {
-        "type": "number",
-        "id": "limit",
-        "label": "Maksymalna liczba produktów (od 1 do 10)",
-        "default": 4
-      }
-    ],
     "presets": [
       {
         "name": "Reszta kolekcji",
