--- a/assets/app.css
+++ b/assets/app.css
@@ -927,6 +927,12 @@ th {
 .top-\[58px\] {
   top: 58px;
 }
+.right-\[105\%\] {
+  right: 105%;
+}
+.-left-5 {
+  left: -1.25rem;
+}
 .z-10 {
   z-index: 10;
 }
@@ -1264,6 +1270,9 @@ th {
 .w-screen {
   width: 100vw;
 }
+.w-\[90\%\] {
+  width: 90%;
+}
 .min-w-\[250px\] {
   min-width: 250px;
 }
@@ -1352,6 +1361,10 @@ th {
 }
 .translate-y-0 {
   --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-y-1\/2 {
+  --tw-translate-y: 50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .rotate-180 {
