--- a/sections/page.liquid
+++ b/sections/page.liquid
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="">
+  <h1 class="text-4xl text-shof-orange my-10">
     {{ page.title | escape }}
   </h1>
   <div class="">
