--- a/templates/password.liquid
+++ b/templates/password.liquid
@@ -1,34 +1,36 @@
-<div class="container my-8 max-w-[400px] text-center">
-  <h1 class="text-3xl font-bold">Password page</h1>
-	{% unless shop.password_message == blank %}
-		<p class="mt-4">{{ shop.password_message }}</p>
-	{% endunless %}
-  <div>
-		{% form 'storefront_password', class: 'space-y-4' %}
-			{% if form.errors %}
-				<div class="flex flex-row items-center justify-center w-full my-3">
-					{% for error in form.errors %}
-						<div class="text-red-500">
-							{% render 'icon-failed' %}
-						</div>
-						<p class="text-red-500 text-sm font-bold ml-2">
-							{{ form.errors.translated_fields[error] }} - {{ form.errors.messages[error] }}
-						</p>
-					{% endfor %}
-				</div>
-			{% endif %}
-		
-			<label for="password" class="sr-only">Password</label>
-			<input
-				type="password"
-				name="password"
-				id="password"
-				placeholder="Password"
-				class="input"
-				autocomplete="new-password"
-				required
-			>
-			<button type="submit" class="button w-full">Sign In</button>
-		{% endform %}
+{% layout 'password' %}
+
+<div class="container my-8 flex flex-col items-center text-center">
+  <h1 class="text-3xl text-shof-orange">Przepraszamy</h1>
+  {% unless shop.password_message == blank %}
+    <div class="mt-4">{{ shop.password_message }}</div>
+  {% endunless %}
+  <div class="flex">
+    {% form 'storefront_password'
+      , class: 'space-y-4' %}
+      {% if form.errors %}
+        <div class="flex flex-row items-center justify-center w-full my-3">
+          {% for error in form.errors %}
+            <div class="text-red-500">
+              {% render 'icon-failed' %}
+            </div>
+            <p class="text-red-500 text-sm font-bold ml-2">
+              {{ form.errors.translated_fields[error] }} - {{ form.errors.messages[error] }}
+            </p>
+          {% endfor %}
+        </div>
+      {% endif %}
+
+      <label for="password" class="sr-only">Hasło</label>
+      <input
+        type="password"
+        name="password"
+        id="password"
+        placeholder="Hasło"
+        class="input"
+        autocomplete="new-password"
+        required>
+      <button type="submit" class="button w-full">Odblokuj</button>
+    {% endform %}
   </div>
 </div>
