--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -14,7 +14,7 @@
       <div class="w-full">
 
         {%- form 'create_customer'
-          , novalidate: 'novalidate' -%}
+        -%}
 
           {% if form.errors %}
             <div class="flex flex-row items-center justify-center w-full my-3">
@@ -93,6 +93,19 @@
               aria-invalid="true"
               aria-describedby="RegisterForm-email-error"
               {% endif %}
+              required>
+          </div>
+          <div class="flex flex-col mb-3">
+            <label for="RegisterForm-phone" class="sr-only tracking-widest">
+              Telefon
+            </label>
+            <input
+              type="tel"
+              name="customer[note][Numer kontaktowy]"
+              id="RegisterForm-phone"
+              placeholder="Telefon"
+              pattern="^\+?[0-9\s\-\(\)]*$"
+              class="input"
               required>
           </div>
 
