--- a/sections/product-description.liquid
+++ b/sections/product-description.liquid
@@ -50,7 +50,7 @@
 
           {% when 'custom-attributes' %}
             {% render 'product-custom-attributes' %}
-            
+
           {% when 'pasek' %}
             {% if product.metafields.custom.paski %}
               {% render 'product-pasek-attribute' %}
@@ -70,20 +70,18 @@
               {% render 'current-price'
                 , class: "mr-4" %}
               <div
-                x-data="{ 
-                  quantity: 1,
-                  pasek: '',
-                  finish: ''
-                }"
-                @finish-changed.window="finish = $event.detail.finish"
-                @pasek-changed.window="pasek = $event.detail.pasek"
+                x-data="addToCartValidation"
+                @finish-changed.window="initializeFinishAttribute"
+                @pasek-changed.window="initializePasekAttribute"
                 @quantity-changed.window="quantity = $event.detail.quantity">
+
                 {% assign product_form_installment_id = 'product-form-installment-' | append: section.id %}
                 {% form 'product'
                   , product
                   , id: product_form_installment_id
                   , novalidate: 'novalidate'
                   , x-ref: 'product_form' %}
+
                   <input
                     type="hidden"
                     name="id"
@@ -92,20 +90,12 @@
                     type="hidden"
                     name="quantity"
                     x-model="quantity" />
-                  <input
-                    type="hidden"
-                    name="properties[Pasek]"
-                    x-model="pasek" />
-                  <input
-                  type="hidden"
-                  name="properties[Wykończenie]"
-                  x-model="finish" />
 
                   <button
                     type="submit"
                     name="add"
                     class="product-section__cart-button button text-xl uppercase"
-                    @click.prevent="Functions.addToCart($refs.product_form)"
+                    @click.prevent="validate"
                     {% unless product.selected_or_first_available_variant.available %}
                     disabled
                     {% endunless %}>
@@ -116,12 +106,14 @@
                     {% endunless %}
                   </button>
 
+
                   {% if block.settings.dynamic_buttons %}
                     {{ form | payment_button }}
                   {% endif %}
 
                 {% endform %}
               </div>
+              <div class="w-full text-red-600" id="message"></div>
             </div>
 
 
@@ -130,6 +122,7 @@
     </div>
   </div>
 </div>
+
 
 {% schema %}
   {
@@ -152,33 +145,27 @@
         "type": "vendor",
         "name": "Vendor",
         "limit": 1
-      },
-      {
+      }, {
         "type": "title",
         "name": "Title",
         "limit": 1
-      },
-      {
+      }, {
         "type": "description",
         "name": "Description",
         "limit": 1
-      },
-      {
+      }, {
         "type": "variant_selector",
         "name": "Variant Selector",
         "limit": 1
-      },
-      {
+      }, {
         "type": "quantity",
         "name": "Quantity",
         "limit": 1
-      },
-      {
+      }, {
         "type": "price",
         "name": "Price",
         "limit": 1
-      },
-      {
+      }, {
         "type": "checkout_buttons",
         "name": "Checkout Buttons",
         "limit": 1,
@@ -188,14 +175,12 @@
             "id": "add_to_cart",
             "label": "Add to cart button text",
             "default": "Do koszyka"
-          },
-          {
+          }, {
             "type": "text",
             "id": "sold_out",
             "label": "Sold Out button text",
             "default": "Wyprzedane"
-          },
-          {
+          }, {
             "type": "checkbox",
             "id": "dynamic_buttons",
             "label": "Allow Dynamic Buttons",
