--- a/assets/app.css
+++ b/assets/app.css
@@ -878,6 +878,9 @@ th {
 .inset-0 {
   inset: 0px;
 }
+.inset-6 {
+  inset: 1.5rem;
+}
 .inset-y-0 {
   top: 0px;
   bottom: 0px;
@@ -1202,6 +1205,13 @@ th {
 .max-h-\[500px\] {
   max-height: 500px;
 }
+.max-h-fit {
+  max-height: -moz-fit-content;
+  max-height: fit-content;
+}
+.max-h-full {
+  max-height: 100%;
+}
 .min-h-0 {
   min-height: 0px;
 }
@@ -1441,6 +1451,9 @@ th {
 .flex-col {
   flex-direction: column;
 }
+.flex-col-reverse {
+  flex-direction: column-reverse;
+}
 .flex-wrap {
   flex-wrap: wrap;
 }
@@ -1676,6 +1689,9 @@ th {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
+.border-transparent {
+  border-color: transparent;
+}
 .bg-\[\#f8f9f4\] {
   --tw-bg-opacity: 1;
   background-color: rgb(248 249 244 / var(--tw-bg-opacity));
@@ -1752,6 +1768,10 @@ th {
 }
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
+}
+.bg-neutral-950 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(10 10 10 / var(--tw-bg-opacity));
 }
 .bg-opacity-10 {
   --tw-bg-opacity: 0.1;
@@ -1907,6 +1927,9 @@ th {
 }
 .pt-8 {
   padding-top: 2rem;
+}
+.pb-8 {
+  padding-bottom: 2rem;
 }
 .text-left {
   text-align: left;
@@ -2194,6 +2217,11 @@ th {
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -2475,6 +2503,10 @@ th {
   --tw-bg-opacity: 1;
   background-color: rgb(127 29 29 / var(--tw-bg-opacity));
 }
+.hover\:bg-neutral-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(23 23 23 / var(--tw-bg-opacity));
+}
 .hover\:fill-accent:hover {
   fill: #ec764a;
 }
@@ -2549,6 +2581,14 @@ th {
 .focus\:ring-neutral-400:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(163 163 163 / var(--tw-ring-opacity));
+}
+.focus\:ring-neutral-100:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(245 245 245 / var(--tw-ring-opacity));
+}
+.focus\:ring-neutral-900:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(23 23 23 / var(--tw-ring-opacity));
 }
 .focus\:ring-offset-2:focus {
   --tw-ring-offset-width: 2px;
@@ -2670,6 +2710,18 @@ th {
   .sm\:h-auto {
     height: auto;
   }
+  .sm\:h-3\/4 {
+    height: 75%;
+  }
+  .sm\:h-5\/6 {
+    height: 83.333333%;
+  }
+  .sm\:h-full {
+    height: 100%;
+  }
+  .sm\:h-\[90\%\] {
+    height: 90%;
+  }
   .sm\:max-h-\[80vh\] {
     max-height: 80vh;
   }
@@ -2689,6 +2741,9 @@ th {
     width: -moz-max-content;
     width: max-content;
   }
+  .sm\:w-3\/4 {
+    width: 75%;
+  }
   .sm\:min-w-\[400px\] {
     min-width: 400px;
   }
@@ -2697,6 +2752,13 @@ th {
   }
   .sm\:max-w-\[1000px\] {
     max-width: 1000px;
+  }
+  .sm\:max-w-lg {
+    max-width: 32rem;
+  }
+  .sm\:max-w-fit {
+    max-width: -moz-fit-content;
+    max-width: fit-content;
   }
   .sm\:flex-1 {
     flex: 1 1 0%;
@@ -2735,6 +2797,9 @@ th {
   .sm\:justify-start {
     justify-content: flex-start;
   }
+  .sm\:justify-end {
+    justify-content: flex-end;
+  }
   .sm\:justify-center {
     justify-content: center;
   }
@@ -2746,6 +2811,11 @@ th {
   }
   .sm\:gap-4 {
     gap: 1rem;
+  }
+  .sm\:space-x-2 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
   }
   .sm\:self-center {
     align-self: center;
