--- a/snippets/product-gallery.liquid
+++ b/snippets/product-gallery.liquid
@@ -1,41 +1,106 @@
-<div class="relative sm:px-4 py-2 select-none w-full">
+<div
+  x-data="productGallery"
+  x-init="initialize({{product.media| json | escape}})"
+  class="relative sm:px-4 py-2 select-none w-full">
+
+  {% comment %} MODAL {% endcomment %}
+
+  <div
+    @keydown.escape.window="modalOpen = false"
+    :class="{ 'z-40': modalOpen }"
+    class="relative w-auto h-auto">
+
+    <template x-teleport="body">
+      <div
+        x-show="modalOpen"
+        class="fixed top-0 left-0 z-[99] flex items-center justify-center w-screen h-screen"
+        x-cloak>
+        <div
+          x-show="modalOpen"
+          x-transition:enter="ease-out duration-300"
+          x-transition:enter-start="opacity-0"
+          x-transition:enter-end="opacity-100"
+          x-transition:leave="ease-in duration-300"
+          x-transition:leave-start="opacity-100"
+          x-transition:leave-end="opacity-0"
+          @click="modalOpen=false"
+          class="absolute inset-0 top-0 w-full h-full bg-white backdrop-blur-sm bg-opacity-70"></div>
+        <div
+          x-show="modalOpen"
+          x-trap.inert.noscroll="modalOpen"
+          x-transition:enter="ease-out duration-300"
+          x-transition:enter-start="opacity-0 -translate-y-2 sm:scale-95"
+          x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
+          x-transition:leave="ease-in duration-200"
+          x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
+          x-transition:leave-end="opacity-0 -translate-y-2 sm:scale-95"
+          class="relative w-full py-6 bg-white border shadow-lg px-6 overflow-y-scroll border-neutral-200 max-h-full sm:h-[90%] sm:max-w-fit sm:rounded-lg">
+
+          <button @click="modalOpen=false" class="absolute top-0 right-0 flex items-center justify-center w-8 h-8 mt-5 mr-5 text-gray-600 rounded-full hover:text-gray-800 hover:bg-gray-50">
+            <svg
+              class="w-5 h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"><path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M6 18L18 6M6 6l12 12" /></svg>
+          </button>
+          <img :src="imageUrl" class="max-h-full" />
+
+        </div>
+      </div>
+    </template>
+  </div>
+
+  {% comment %} GALLERY {% endcomment %}
 
   <div style="--swiper-navigation-color: #939090; --swiper-pagination-color: #fff" class="swiper mySwiper2">
 
     <div class="swiper-wrapper ">
       {% for media in product.media %}
-        <div class="swiper-slide cursor-pointer" data-image-id="{{ media.id }}">
+        <div
+          @click="handleClick({{media.id}})"
+          class="swiper-slide cursor-pointer"
+          data-image-id="{{ media.id }}">
           {% render 'product-media'
             , media: media
             , class: 'w-full'
             , controls: true %}
         </div>
+
       {% endfor %}
 
     </div>
   </div>
-  <div class="swiper-thumbs-wrapper relative mt-[20px]">
-    <div class="swiper-button-prev cursor-pointer text-primary absolute top-1/2 -translate-y-1/2 -left-10 hover:scale-125 active:scale-100 transition rounded-full">{% render 'icon-chevron-left'
+
+  {% if product.media.size > 1 %}
+    <div class="swiper-thumbs-wrapper relative mt-[20px]">
+      <div class="swiper-button-prev cursor-pointer text-primary absolute top-1/2 -translate-y-1/2 -left-10 hover:scale-125 active:scale-100 transition rounded-full">{% render 'icon-chevron-left'
 , size: 30 %}</div>
-    <div class="swiper-button-next cursor-pointer text-primary absolute top-1/2 -translate-y-1/2 -right-10 hover:scale-125 active:scale-100 transition rounded-full">{% render 'icon-chevron-right'
+      <div class="swiper-button-next cursor-pointer text-primary absolute top-1/2 -translate-y-1/2 -right-10 hover:scale-125 active:scale-100 transition rounded-full">{% render 'icon-chevron-right'
 , size: 30 %}</div>
 
-    <div thumbsSlider="" class="swiper mySwiper">
-      <div class="swiper-wrapper">
+      <div thumbsSlider="" class="swiper mySwiper">
+        <div class="swiper-wrapper">
 
-        {% for media in product.media %}
-          <div class="swiper-slide">
-            {% render 'product-media'
-              , media: media
-              , width: 200
-              , height: 200
-              , noTags: true
-              , class: 'w-full' %}
-          </div>
-        {% endfor %}
+          {% for media in product.media %}
+            <div class="swiper-slide">
+              {% render 'product-media'
+                , media: media
+                , width: 200
+                , height: 200
+                , noTags: true
+                , class: 'w-full' %}
+            </div>
+          {% endfor %}
 
+        </div>
       </div>
     </div>
-  </div>
+  {% endif %}
+
 
 </div>
