--- a/sections/product-description.liquid
+++ b/sections/product-description.liquid
@@ -63,11 +63,10 @@
               {% render 'current-price'
                 , class: "mr-4" %}
               <div
-                x-data="addToCartValidation"
+                x-data="addToCartValidation('{{product.has_only_default_variant}}','{{product.selected_or_first_available_variant.id}}')"
                 @finish-changed.window="initializeFinishAttribute"
                 @pasek-changed.window="initializePasekAttribute"
                 @quantity-changed.window="quantity = $event.detail.quantity">
-
                 {% assign product_form_installment_id = 'product-form-installment-' | append: section.id %}
                 {% form 'product'
                   , product
@@ -76,9 +75,10 @@
                   , x-ref: 'product_form' %}
 
                   <input
+                    x-ref="variant"
                     type="hidden"
                     name="id"
-                    value="{{ product.selected_or_first_available_variant.id }}">
+                    x-model="variant" />
                   <input
                     type="hidden"
                     name="quantity"
