--- a/snippets/cart-page-content.liquid
+++ b/snippets/cart-page-content.liquid
@@ -78,55 +78,98 @@
       {% endfor %}
     </div>
 
+
     {% comment %} INPOST {% endcomment %}
     <div
       x-data="inpost"
       @form-submit.window="handleSubmit"
       class="flex flex-col gap-5 ">
+      <button @click="modalOpen=true; isUsed=true" class=" self-start inline-flex items-center justify-center h-10 px-4 py-2 text-sm font-medium transition-colors bg-white border rounded-md hover:bg-neutral-100 active:bg-white focus:bg-white focus:outline-none focus:ring-2 focus:ring-neutral-200/60 focus:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none">Wybierz paczkomat</button>
+      <template x-teleport="body">
+        <div
+          x-show="modalOpen"
+          class="fixed top-0 left-0 z-[99] flex sm:items-center justify-center w-screen h-screen"
+          x-cloak>
+          <div
+            x-show="modalOpen"
+            x-transition:enter="ease-out duration-300"
+            x-transition:enter-start="opacity-0"
+            x-transition:enter-end="opacity-100"
+            x-transition:leave="ease-in duration-300"
+            x-transition:leave-start="opacity-100"
+            x-transition:leave-end="opacity-0"
+            class="absolute inset-0 w-full h-full bg-white backdrop-blur-sm bg-opacity-70"></div>
+          <div
+            x-show="modalOpen"
+            x-trap.inert.noscroll="modalOpen"
+            x-transition:enter="ease-out duration-300"
+            x-transition:enter-start="opacity-0 -translate-y-2 sm:scale-95"
+            x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
+            x-transition:leave="ease-in duration-200"
+            x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
+            x-transition:leave-end="opacity-0 -translate-y-2 sm:scale-95"
+            class="relative w-full bg-white border shadow-lg border-neutral-200 sm:max-w-lg sm:rounded-lg flex flex-col gap-5 py-5 sm:max-h-[90vh]">
+            <div class="px-5">
+              <h3 class="text-lg font-semibold">Wybór dostawy</h3>
 
-      {% render 'checkbox'
-        , model: 'x-model="isUsed"'
-        , name: 'name="inpost"'
-        , for: 'for="inpost"'
-        , id: 'id="inpost"'
-        , content: 'Paczkomat?' %}
+              <p>Jeśli tak, wybierz swój ulubiony paczkomat</p>
+            </div>
 
 
-      <div x-show="isUsed" class="border max-h-[500px] flex flex-col rounded-xl gap-5 p-5">
-        <div class="flex gap-5 justify-stretch">
-          <input
-            @input.debounce="handleInput"
-            type="text"
-            x-model="input"
-            placeholder="Kod pocztowy / paczkomatu"
-            class="flex flex-1 h-10 px-3 py-2 text-sm bg-white border rounded-md border-neutral-300 ring-offset-background placeholder:text-neutral-500 focus:border-neutral-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-neutral-400 disabled:cursor-not-allowed disabled:opacity-50" />
-          <button
-            type="button"
-            class="inline-flex items-center justify-center px-3 py-2 text-sm font-medium tracking-wide transition-colors duration-200 bg-white border rounded-md text-neutral-500 hover:text-neutral-700 border-neutral-200/70 hover:bg-neutral-100 active:bg-white focus:bg-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-neutral-200/60 focus:shadow-outline"
-            @click.debounce="handleLocalization">
-            {% render 'icon-pin' %}
-          </button>
+            <div x-show="isUsed" class=" min-h-0 flex-1 flex flex-col rounded-xl gap-5">
+              <div class="flex gap-5 border-b justify-stretch px-5 pb-5">
+                <input
+                  @input.debounce="handleInput"
+                  type="text"
+                  x-model="input"
+                  placeholder="Kod pocztowy / paczkomatu"
+                  class="flex flex-1 h-10 px-3 py-2 text-sm bg-white border rounded-md border-neutral-300 ring-offset-background placeholder:text-neutral-500 focus:border-neutral-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-neutral-400 disabled:cursor-not-allowed disabled:opacity-50" />
+                <button
+                  type="button"
+                  class="inline-flex items-center justify-center px-3 py-2 text-sm font-medium tracking-wide transition-colors duration-200 bg-white border rounded-md text-neutral-500 hover:text-neutral-700 border-neutral-200/70 hover:bg-neutral-100 active:bg-white focus:bg-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-neutral-200/60 focus:shadow-outline"
+                  @click.debounce="handleLocalization">
+                  {% render 'icon-pin' %}
+                </button>
+              </div>
+
+              <div x-show="points.length > 0" class="overflow-y-scroll flex flex-col gap-3 px-5">
+                <template x-for="(option, index) in points" :key="index">
+                  <label @click="selected=option.name" class="flex items-start p-5 space-x-3 bg-white border rounded-md shadow-sm hover:bg-gray-50 border-neutral-200/70">
+                    <input
+                      type="radio"
+                      name="radio-group"
+                      :value="option.name"
+                      class="text-gray-900 translate-y-px focus:ring-gray-700" />
+                    <span class="relative flex flex-col text-left space-y-1.5 leading-none">
+                      <span x-text="option.name" class="font-semibold"></span>
+                      <div class="text-sm opacity-50">
+                        <span x-text="option.description"></span>
+                      </div>
+                    </span>
+                  </label>
+                </template>
+              </div>
+            </div>
+
+
+            <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 px-5 gap-2">
+              <button
+                @click="modalOpen=false; isUsed=false"
+                type="button"
+                class="inline-flex items-center justify-center h-10 px-4 py-2 text-sm font-medium transition-colors border rounded-md focus:outline-none focus:ring-2 focus:ring-neutral-100 focus:ring-offset-2">Wymieram dostawę inną metodą</button>
+              <button
+                @click="modalOpen=false"
+                type="button"
+                class="inline-flex items-center justify-center h-10 px-4 py-2 text-sm font-medium text-white transition-colors border border-transparent rounded-md focus:outline-none focus:ring-2 focus:ring-neutral-900 focus:ring-offset-2 bg-neutral-950 hover:bg-neutral-900"
+                :class="!selected ? 'bg-neutral-500 hover:bg-neutral-500 pointer-events-none' : '  '">Wybierz paczkomat</button>
+            </div>
+          </div>
         </div>
+      </template>
 
-        <div x-show="points.length > 0" class="overflow-y-scroll flex flex-col gap-3">
-          <template x-for="(option, index) in points" :key="index">
-            <label @click="selected=option.name" class="flex items-start p-5 space-x-3 bg-white border rounded-md shadow-sm hover:bg-gray-50 border-neutral-200/70">
-              <input
-                type="radio"
-                name="radio-group"
-                :value="option.name"
-                class="text-gray-900 translate-y-px focus:ring-gray-700" />
-              <span class="relative flex flex-col text-left space-y-1.5 leading-none">
-                <span x-text="option.name" class="font-semibold"></span>
-                <div class="text-sm opacity-50">
-                  <span x-text="option.description"></span>
-                </div>
-              </span>
-            </label>
-          </template>
-        </div>
-      </div>
+
     </div>
+
 
     <div class="flex flex-col gap-4">
       <label for="Cart-note" class="sr-only">Uwagi do zamówienia</label>
