--- a/snippets/cart-page-content.liquid
+++ b/snippets/cart-page-content.liquid
@@ -84,12 +84,19 @@
       x-data="inpost"
       @form-submit.window="handleSubmit"
       class="flex flex-col gap-5 ">
-      <button @click="modalOpen=true; isUsed=true" class=" self-start inline-flex items-center justify-center h-10 px-4 py-2 text-sm font-medium transition-colors bg-white border rounded-md hover:bg-neutral-100 active:bg-white focus:bg-white focus:outline-none focus:ring-2 focus:ring-neutral-200/60 focus:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none">Wybierz paczkomat</button>
+      <button
+        @click="modalOpen=true"
+        type="button"
+        class="self-start inline-flex items-center justify-center h-10 px-4 py-2 text-sm font-medium transition-colors bg-white border rounded-md hover:bg-neutral-100 active:bg-white focus:bg-white focus:outline-none focus:ring-2 focus:ring-neutral-200/60 focus:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none">
+        WYBÓR DOSTAWY
+      </button>
       <template x-teleport="body">
         <div
           x-show="modalOpen"
           class="fixed top-0 left-0 z-[99] flex sm:items-center justify-center w-screen h-screen"
           x-cloak>
+
+          {% comment %} Overlay {% endcomment %}
           <div
             x-show="modalOpen"
             x-transition:enter="ease-out duration-300"
@@ -99,6 +106,8 @@
             x-transition:leave-start="opacity-100"
             x-transition:leave-end="opacity-0"
             class="absolute inset-0 w-full h-full bg-white backdrop-blur-sm bg-opacity-70"></div>
+
+          {% comment %} Modal content{% endcomment %}
           <div
             x-show="modalOpen"
             x-trap.inert.noscroll="modalOpen"
@@ -109,15 +118,26 @@
             x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
             x-transition:leave-end="opacity-0 -translate-y-2 sm:scale-95"
             class="relative w-full bg-white border shadow-lg border-neutral-200 sm:max-w-lg sm:rounded-lg flex flex-col gap-5 py-5 sm:max-h-[90vh]">
-            <div class="px-5">
-              <h3 class="text-lg font-semibold">Wybór dostawy</h3>
 
-              <p>Jeśli tak, wybierz swój ulubiony paczkomat</p>
+            <div class="px-5 flex flex-col gap-5">
+              <h3 class="text-lg font-semibold uppercase sm:text-center">Wybór dostawy</h3>
+
+              <div class="flex gap-5">
+                <button
+                  @click="isUsed=true"
+                  type="button"
+                  :class="isUsed ? 'border-shof-orange brightness-95' : ''"
+                  class="border rounded-lg flex flex-1 py-4 font-medium text-lg justify-center items-center bg-white hover:brightness-95 active:brightness-90">PACZKOMATY<br>17zł</button>
+                <button
+                  @click="isUsed=false;modalOpen=false"
+                  type="button"
+                  class="border rounded-lg flex flex-1 py-4 font-medium text-lg justify-center items-center bg-white hover:brightness-95 active:brightness-90">KURIER<br>20zł</button>
+              </div>
             </div>
 
 
             <div x-show="isUsed" class=" min-h-0 flex-1 flex flex-col rounded-xl gap-5">
-              <div class="flex gap-5 border-b justify-stretch px-5 pb-5">
+              <div class="flex gap-5 justify-stretch px-5 pb-5">
                 <input
                   @input.debounce="handleInput"
                   type="text"
@@ -151,23 +171,17 @@
               </div>
             </div>
 
-
-            <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 px-5 gap-2">
+            <div class="px-5 flex justify-center">
               <button
-                @click="modalOpen=false; isUsed=false"
-                type="button"
-                class="inline-flex items-center justify-center h-10 px-4 py-2 text-sm font-medium transition-colors border rounded-md focus:outline-none focus:ring-2 focus:ring-neutral-100 focus:ring-offset-2">Wymieram dostawę inną metodą</button>
-              <button
-                @click="modalOpen=false"
-                type="button"
-                class="inline-flex items-center justify-center h-10 px-4 py-2 text-sm font-medium text-white transition-colors border border-transparent rounded-md focus:outline-none focus:ring-2 focus:ring-neutral-900 focus:ring-offset-2 bg-neutral-950 hover:bg-neutral-900"
-                :class="!selected ? 'bg-neutral-500 hover:bg-neutral-500 pointer-events-none' : '  '">Wybierz paczkomat</button>
+                x-show="isUsed"
+                :class="!selected ? 'bg-neutral-200 pointer-events-none' : ''"
+                class="button uppercase"
+                @click="modalOpen=false">Wybierz</button>
             </div>
+
           </div>
         </div>
       </template>
-
-
     </div>
 
 
