updated button text

--- a/snippets/cart-page-content.liquid
+++ b/snippets/cart-page-content.liquid
@@ -87,8 +87,9 @@
       <button
         @click="modalOpen=true"
         type="button"
+        x-text="selected ? selected : 'Wybór dostawy'"
         class="self-start inline-flex items-center justify-center h-10 px-4 py-2 text-sm font-medium transition-colors bg-white border rounded-md hover:bg-neutral-100 active:bg-white focus:bg-white focus:outline-none focus:ring-2 focus:ring-neutral-200/60 focus:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none">
-        WYBÓR DOSTAWY
+
       </button>
       <template x-teleport="body">
         <div
