fix: inpost script validation

--- a/assets/app.css
+++ b/assets/app.css
@@ -1199,6 +1199,9 @@ th {
 .max-h-56 {
   max-height: 14rem;
 }
+.max-h-\[500px\] {
+  max-height: 500px;
+}
 .max-h-full {
   max-height: 100%;
 }
@@ -1672,13 +1675,13 @@ th {
   --tw-border-opacity: 1;
   border-color: rgb(220 38 38 / var(--tw-border-opacity));
 }
-.border-shof-orange {
-  --tw-border-opacity: 1;
-  border-color: rgb(236 118 74 / var(--tw-border-opacity));
-}
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+.border-shof-orange {
+  --tw-border-opacity: 1;
+  border-color: rgb(236 118 74 / var(--tw-border-opacity));
 }
 .bg-\[\#f8f9f4\] {
   --tw-bg-opacity: 1;
@@ -1882,9 +1885,6 @@ th {
 .pb-4 {
   padding-bottom: 1rem;
 }
-.pb-5 {
-  padding-bottom: 1.25rem;
-}
 .pl-3 {
   padding-left: 0.75rem;
 }
@@ -1914,6 +1914,9 @@ th {
 }
 .pt-8 {
   padding-top: 2rem;
+}
+.pb-5 {
+  padding-bottom: 1.25rem;
 }
 .text-left {
   text-align: left;
@@ -2700,11 +2703,11 @@ th {
   .sm\:max-h-\[80vh\] {
     max-height: 80vh;
   }
-  .sm\:max-h-\[90vh\] {
-    max-height: 90vh;
-  }
   .sm\:max-h-\[90vmin\] {
     max-height: 90vmin;
+  }
+  .sm\:max-h-\[90vh\] {
+    max-height: 90vh;
   }
   .sm\:w-2\/6 {
     width: 33.333333%;
